--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,37 +3,42 @@
     <head>
       <meta charset="utf-8" />
       <title>Test</title>
-      <meta name="Enter the URL of an article to check its sentiment" content="Example" />
+      <meta name="Natural language processing tool" content="Example" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script type="text/javascript" src="../../../dist/main.js"></script>
+      <link rel="stylesheet" href="/styles/resets.css">
+      <link rel="stylesheet" href="/styles/base.css">
+      <link rel="stylesheet" href="/styles/header.css">
+      <link rel="stylesheet" href="/styles/form.css">
+      <link rel="stylesheet" href="/styles/footer.css">
     </head>
 
     <body>
 
         <header>
             <div>
-                <h1>Article sentiment checker</h1>
-                <p>Enter the URL of an article to check its sentiment</p>
+                <h1>Natural language processing tool</h1>
             </div>
         </header>
 
         <main>
             <section>
                 <form onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Enter URL">
-                    <button type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" submit="return Client.handleSubmit(event)">Check it out</button>
+                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="URL">
+                    <button type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" submit="return Client.handleSubmit(event)">Submit</button>
                 </form>
             </section>
 
             <section class="results">
-                <h2>Sentiment?</h2>
+                <h2>Sentiment</h2>
                 <div id="results">
-                  <p id="coming" class="hide">Checking...</p>
+                  <p id="coming" class="hide">Checking..</p>
                   <ul id="data-list" class="data-list">
-                    <li id="score_tag"></li>
-                    <li id="agreement"></li>
                     <li id="confidence"></li>
+                    <li id="score_tag"></li>
                     <li id="irony"></li>
                     <li id="subjectivity"></li>
+                    <li id="agreement"></li>
                   </ul>
                 </div>
             </section>
@@ -43,14 +48,14 @@
             <hr>
             <p class="footer-text">Footer</p>
         </footer>
-        <!-- <script>
-          // Check that service workers are supported
+        <script>
+          // check that service workers are supported
           if ('serviceWorker' in navigator) {
-            // Use the window load event to keep the page load performant
+            // use the window load event to keep the page load performant
             window.addEventListener('load', () => {
               navigator.serviceWorker.register('/service-worker.js');
             });
           }
-        </script> -->
+        </script>
     </body>
 </html>
